# pygeos

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  MANIFEST.in  README.rst  appveyor.yml  index.json  info.json  pyproject.toml  regressions.xml  setup.cfg  setup.py
.github/: LICENSE_wheels
.github/workflows/: build_wheels.yml  lint.yml  release.yml  test-conda.yml  test-linux.yml  test-pip.yml  test-windows.yml
benchmarks/: benchmarks.py
ci/: install_geos.cmd  install_geos.sh
ci/envs/: py36-geos36.yml  py37-geos37.yml  py38-geos-latest-conda-forge.yml  py38-geos-latest.yml  py38-geos38.yml
docker/: Dockerfile.valgrind
docs/: environment.yml  geometry.rst  index.rst  installation.rst
graphs/summary/: benchmarks.PointPolygonTimeSuite.time_intersection.json
pygeos/: __init__.py  _bulk_creation.pyx  _constructive.pyx  _geom.pyx  _geometry.pxd  _geometry.pyx  _geos.pxd  _geos.pyx  _pygeos_api.pxd  _pygeos_lib.pxd  _vector.pxd  _vector.pyx  constructive.py  coordinates.py  creation.py  cythondemo.pyx  decorators.py  flatcoords.pyx  geometry.py  geos.py  io.py  linear.py  measurement.py  predicates.py  set_operations.py  strtree.py  test_wrap.py  testing.py  transform.py  ufunc_tools.py  utils.py
pygeos/ext/: __init__.py  geom.pxd  geom.pyx  geos.pxd  geos_wrapper.pyx  (+1 more)
src/: c_api.c  c_api.h  coords.c  coords.h  core.c  dtype.c  dtype.h  fast_loop_macros.h  geom_op.c  geom_op.h  geos.c  geos.h  io.c  io.h  lib.c  pygeom.c  pygeom.h  pygeos_api.c  pygeos_api.h  strtree.c  strtree.h  ufuncs.c  ufuncs.h  vector.c  vector.h
(+41 files in other folders)
