[build-system]
# numpy and Cython are required to execute setup.py to build Cython extensions
requires = [
    "setuptools",
    "wheel",
    "numpy==1.15.4; python_version=='3.6'",
    "numpy==1.17.5; python_version=='3.7'",
    "numpy==1.19.5; python_version=='3.8'",
    "numpy==1.20.3; python_version=='3.9'",
    # do not pin numpy on future versions of python to avoid incompatible numpy and python versions
    "numpy; python_version>='3.10'",
    "Cython>=0.29",
]
